--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vite": "^7.3.1"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.97.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "react": "^19.2.4",
