--- a/package.json
+++ b/package.json
@@ -1,33 +1,35 @@
 {
-  "name": "room-count",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "@types/react": "^19.2.13",
-    "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.4",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.38",
-    "sass": "^1.97.3",
-    "tailwindcss": "^3.4.17",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "~5.9.3",
-    "vite": "^7.3.1"
-  },
-  "dependencies": {
-    "@supabase/supabase-js": "^2.97.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
-    "react-router-dom": "^7.13.0",
-    "tailwind-merge": "^3.4.0",
-    "zustand": "^5.0.11"
-  }
+    "name": "room-count",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
+        "format": "prettier --write ."
+    },
+    "devDependencies": {
+        "@types/react": "^19.2.13",
+        "@types/react-dom": "^19.2.3",
+        "@vitejs/plugin-react": "^5.1.4",
+        "autoprefixer": "^10.4.20",
+        "postcss": "^8.4.38",
+        "prettier": "^3.8.1",
+        "sass": "^1.97.3",
+        "tailwindcss": "^3.4.17",
+        "tailwindcss-animate": "^1.0.7",
+        "typescript": "~5.9.3",
+        "vite": "^7.3.1"
+    },
+    "dependencies": {
+        "@supabase/supabase-js": "^2.97.0",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "react": "^19.2.4",
+        "react-dom": "^19.2.4",
+        "react-router-dom": "^7.13.0",
+        "tailwind-merge": "^3.4.0",
+        "zustand": "^5.0.11"
+    }
 }
